clusters/canary/deployments-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-v1
  labels:
    app: be
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
        version: v1
    spec:
      containers:
        - name: be
          image: tiegris/canary_be:v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
