clusters/canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fe
            port: 
              number: 80
      - pathType: Prefix
        path: /api/nameday
        backend:
          service:
            name: be
            port: 
              number: 80
